# gdal_rename

./: .Makefile.swp  GDALConfig.txt  INSTALL  Makefile  Makefile.in  README.md  aclocal.m4  config.status  configure  configure.ac  gdal_rename.cpp  mailing.txt
.deps/: gdal_rename-gdal_rename.Po
TestManMakefile/: Makefile.20180518
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
m4/: m4_ax_lib_gdal.m4
src/: Makefile  Makefile.am  Makefile.in  gdal_rename.cpp
src/.deps/: gdal_rename-gdal_rename.Po
